fixed some layout issues caused by last commit

--- a/app/assets/stylesheets/application.sass
+++ b/app/assets/stylesheets/application.sass
@@ -254,9 +254,8 @@
   #sidebar .widget-notice a:hover
     text-decoration: none
 
-  .mobile nav + nav
-    //margin-top: -20px
-    float: right
+  .mobile#nav_mobile nav + nav
+    margin-top: -20px
 
   .mobile nav + nav ul
     height: 87px
