--- a/app/assets/stylesheets/mobile/_header.sass
+++ b/app/assets/stylesheets/mobile/_header.sass
@@ -199,7 +199,8 @@
   text-overflow: ellipsis
   background: image-url("mobile/nav_button_bg.png") 0px 8px no-repeat
 
-#header nav.right_nav
+#header nav.right_nav,
+.reader_modal_header .nav_right
   float: right
   height: auto
   width: auto
